# tfds-mura

./: README.md  environment.yaml  example.ipynb  setup.cfg  virtualenv.sh
cxr14/: cxr14.py  cxr14_test.py
src/: tfds_from_disc.py
src/cxr14/: __init__.py  checksums.tsv  cxr14.py
src/mura/: __init__.py  mura.py  mura_test.py  test_images.py  tfds_from_disc.py
tf2lib/: __init__.py
