[metadata]
name = cxr14-tmarkmann
version = 0.0.1
author = Thorben Markmann
author_email = tmarkmann@techfak.uni-bielefeld.de
description = ChestX-ray14 dataset for tfds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tmarkmann/tfds-cxr14
project_urls =
    Bug Tracker = https://github.com/tmarkmann/tfds-cxr14/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data=True

[options.packages.find]
where = src