[metadata]
name = mura
version = 1.2.7
author = Dimitry Mindlin
author_email = dmindlin@techfak.uni-bielefeld.de
description = Mura dataset for tfds
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dimitrymindlin/tfds-mura
project_urls =
    Bug Tracker = https://github.com/dimitrymindlin/tfds-mura/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data=True

[options.packages.find]
where = src